--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -9,7 +9,7 @@
 .chatService {
   display: flex;
   justify-content: center;
-  background: linear-gradient(45deg,#02ddff, #ffffff);
+  background: linear-gradient(45deg, #3991b9, #ffffff);
   background-size: cover;
   background-repeat: no-repeat;
   width: 100vw;
@@ -22,24 +22,118 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 660px;
-  height: 1050px;
+  width: 550px;
+  height: 850px;
   padding:20px;
-  background-color: #ffe68c;
-  border-radius: 30px;
+  padding-left: 0;
+  padding-right: 0;
+  background-color: #fbec18;
+  border-radius: 25px;
+  border: solid rgba(191, 93, 93, 0.372) 4px;
 }
 .chatServiceTitle {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
-  font-size: 50px;
+  font-size: 75px;
   font-weight: bold;
-  // margin-bottom: 50px;
+  margin-bottom: 20px;
+  color: #512e2e;
 }
 
 .dragonBallImg{
-  width: 10%;
-  margin: 20px;
+  width: 130px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.chatServiceBody{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.notification-msg{
+  position: fixed;
+  top: 12px;
+  right: 12px;
+}
+
+.notification-image{
+  width: 35px;
+  margin-right: 10px;
+}
+
+.notification-msg-title{
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
+}
+
+.notification-msg-content{
+  font-size: 20px;
+}
+.toast {
+  --bs-toast-padding-x: 0.75rem;
+  --bs-toast-padding-y: 0.5rem;
+  --bs-toast-spacing: 1.5rem;
+  --bs-toast-max-width: 350px;
+  --bs-toast-font-size: 0.875rem;
+  --bs-toast-color: ;
+  --bs-toast-bg: rgba(255, 255, 255, 0.85);
+  --bs-toast-border-width: 1px;
+  --bs-toast-border-color: var(--bs-border-color-translucent);
+  --bs-toast-border-radius: 0.375rem;
+  --bs-toast-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  --bs-toast-header-color: #6c757d;
+  --bs-toast-header-bg: rgba(255, 255, 255, 0.85);
+  --bs-toast-header-border-color: rgba(0, 0, 0, 0.05);
+  width: var(--bs-toast-max-width);
+  max-width: 100%;
+  font-size: var(--bs-toast-font-size);
+  color: var(--bs-toast-color);
+  pointer-events: auto;
+  background-color: var(--bs-toast-bg);
+  background-clip: padding-box;
+  border: var(--bs-toast-border-width) solid var(--bs-toast-border-color);
+  box-shadow: var(--bs-toast-box-shadow);
+  border-radius: var(--bs-toast-border-radius);
+  timeout:1000;
+}
+.toast-header {
+  display: flex;
+  align-items: center;
+  padding: var(--bs-toast-padding-y) var(--bs-toast-padding-x);
+  color: var(--bs-toast-header-color);
+  background-color: var(--bs-toast-header-bg);
+  background-clip: padding-box;
+  border-bottom: var(--bs-toast-border-width) solid var(--bs-toast-header-border-color);
+  border-top-left-radius: calc(var(--bs-toast-border-radius) - var(--bs-toast-border-width));
+  border-top-right-radius: calc(var(--bs-toast-border-radius) - var(--bs-toast-border-width));
+}
+.toast-header .btn-close {
+  margin-right: calc(var(--bs-toast-padding-x) * -.5);
+  margin-left: var(--bs-toast-padding-x);
+}
+[type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled) {
   cursor: pointer;
+}
+
+.btn-close {
+  box-sizing: content-box;
+  width: 1em;
+  height: 1em;
+  padding: 0.25em 0.25em;
+  color: #000;
+  background-image: url('data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23000%27%3e%3cpath d=%27M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z%27/%3e%3c/svg%3e');
+  border: 0;
+  border-radius: 0.375rem;
+  opacity: .5;
+}
+
+.toast-body {
+  padding: var(--bs-toast-padding-x);
+  word-wrap: break-word;
 }
