--- a/client/src/component/ChatRoomList/ChatRoomList.scss
+++ b/client/src/component/ChatRoomList/ChatRoomList.scss
@@ -1,6 +1,3 @@
-.savingData {
-    display: flex;
-}
 
 .chat-room-button {
     display: flex;
@@ -8,7 +5,7 @@
     align-items: center;
     width: 100%;
     padding:20px;
-    background-color: #ff8e6e;;
+    background-color: #512e2e;;
     border-radius: 8px;
     color:white;
     font-weight: 600;
@@ -17,7 +14,7 @@
 }
 
 .chat-room-button:hover {
-    background: #a6089e;
+    background: #754907;
     transition: 0.3s ease-out;
   }
 
